<resources>
    <string name="app_name">LocationDemo</string>
    <string name="add_location">Add Location</string>
    <string name="update_location">Update Location</string>
    <string name="location_list">Location List</string>
    <string name="search_places">Search Places</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="map_view">Map Preview</string>
    <string name="sort_location">Sort The Location :</string>
    <string name="sort_asc">ASC</string>
    <string name="sort_desc">DESC</string>
    <string name="no_location_msg">There are no location yet.</string>
    <string name="select_location_msg">Please select Location</string>
</resources>